--- a/browser-extensions-project/index.html
+++ b/browser-extensions-project/index.html
@@ -1,14 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Browser-extensions</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Browser-extensions</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul class="nav-ul-list">
+          <li><img src="../assets/images/logo.svg" alt="" /></li>
+          <li>
+            <div class="dark-light">
+              <img src="../assets/images/icon-sun.svg" alt="" />
+            </div>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
+    <section class="filter">
+      <div><p>Extensions List</p></div>
+      <div>
+        <button>All</button>
+        <button>Active</button>
+        <button>Inactive</button>
+      </div>
+    </section>
 
-  <script src="app.js"></script>
-</body>
+    <section class="extensions-list">
+
+      <div class="main">
+        <div class="img-para">
+          <div><img src="../assets/images/logo-dom-snapshot.svg" alt="" /></div>
+          <div>
+            <h3>hgfghjkjh</h3>
+            <p>sdfghgfergh</p>
+          </div>
+        </div>
+        <div class="rem-toggle">
+          <div><button>Remove</button></div>
+            <label class="toggle-switch">
+              <input type="checkbox" />
+              <span class="slider"></span>
+            </label>
+        </div>
+      </div>
+
+       <div class="main">
+        <div class="img-para">
+          <div><img src="../assets/images/logo-dom-snapshot.svg" alt="" /></div>
+          <div>
+            <h3>hgfghjkjh</h3>
+            <p>sdfghgfergh</p>
+          </div>
+        </div>
+        <div class="rem-toggle">
+          <div><button>Remove</button></div>
+          <div>
+            <label class="toggle-switch">
+              <input type="checkbox" />
+              <span class="slider"></span>
+            </label>
+          </div>
+        </div>
+      </div>
+
+       <div class="main">
+        <div class="img-para">
+          <div><img src="../assets/images/logo-dom-snapshot.svg" alt="" /></div>
+          <div>
+            <h3>hgfghjkjh</h3>
+            <p>sdfghgfergh</p>
+          </div>
+        </div>
+        <div class="rem-toggle">
+          <div><button>Remove</button></div>
+          <div>
+            <label class="toggle-switch">
+              <input type="checkbox" />
+              <span class="slider"></span>
+            </label>
+          </div>
+        </div>
+      </div>
+     
+    </section>
+
+    <script src="app.js"></script>
+  </body>
 </html>
