Toggle function Added

--- a/browser-extensions-project/index.html
+++ b/browser-extensions-project/index.html
@@ -22,10 +22,10 @@
 
     <section class="filter">
       <div><p>Extensions List</p></div>
-      <div>
-        <button>All</button>
-        <button>Active</button>
-        <button>Inactive</button>
+      <div id="extensionList">
+        <button class="button-value" onclick=" filter('all')">All</button>
+        <button class="button-value"  id ="active"onclick=" filter('Active')">Active</button>
+        <button class="button-value" onclick=" filter('Inactive')">Inactive</button>
       </div>
     </section>
 
